--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ authors = ["Nyári Dávid Tamás <nyaridavid@gmail.com>"]
 nalgebra = "~0"
 num = "~0"
 approx = "~0"
+float-cmp = "~0"
+num-traits = "~0"
