--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,11 @@ num = "~0"
 approx = "~0"
 float-cmp = "~0"
 num-traits = "~0"
+rand = "~0"
 
 [profile.dev]
 opt-level = 0
 
 [profile.release]
-opt-level = 4
+debug = true
+opt-level = 3
